--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
                   git config --global user.name "Github Actions"
                   chmod 777 gradlew
                   ./gradlew clean --stacktrace
+                  ./gradlew PaperRefLatest --stacktrace
                   ./gradlew applyPatches --stacktrace
                   ./gradlew createReobfBundlerJar --stacktrace
             - uses: actions/upload-artifact@v3
