--- a/.github/workflows/upstream.yml
+++ b/.github/workflows/upstream.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Configure Git User Details
         run: git config --global user.email "actions@github.com" && git config --global user.name "Github Actions"
       - name: Update Upstream Commit Hash
-        run: ./gradlew foliaRefLatest --stacktrace
+        run: ./gradlew PaperRefLatest --stacktrace
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
